--- a/MyUserList/Base.lproj/Main.storyboard
+++ b/MyUserList/Base.lproj/Main.storyboard
@@ -20,17 +20,17 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="QGJ-3i-ImE" customClass="UserTableViewCell" customModule="MyUserList" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="80.333335876464844"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="80" id="QGJ-3i-ImE" customClass="UserTableViewCell" customModule="MyUserList" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QGJ-3i-ImE" id="Mee-0f-WVX">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="80.333335876464844"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uyC-mQ-60L">
-                                                    <rect key="frame" x="10" y="10.000000000000004" width="60" height="60.333333333333343"/>
+                                                    <rect key="frame" x="10" y="10" width="60" height="60"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="60" id="OgB-Ts-8pn"/>
+                                                        <constraint firstAttribute="width" secondItem="uyC-mQ-60L" secondAttribute="height" multiplier="1:1" id="i21-Z1-Mmy"/>
                                                         <constraint firstAttribute="width" constant="60" id="wUT-JX-9N5"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
@@ -40,9 +40,8 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IF-ob-vah">
-                                                    <rect key="frame" x="80" y="11" width="200" height="21"/>
+                                                    <rect key="frame" x="80" y="11" width="283" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="200" id="46G-gl-s5W"/>
                                                         <constraint firstAttribute="height" constant="21" id="P2f-jG-puz"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -50,9 +49,8 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7o-dH-bUG">
-                                                    <rect key="frame" x="80" y="48.333333333333336" width="200" height="21.000000000000007"/>
+                                                    <rect key="frame" x="80" y="48" width="283" height="21"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="200" id="bT5-2r-fAE"/>
                                                         <constraint firstAttribute="height" constant="21" id="ytc-ed-9Iw"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
@@ -63,10 +61,12 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="L7o-dH-bUG" secondAttribute="bottom" id="1p0-qG-PPQ"/>
                                                 <constraint firstItem="uyC-mQ-60L" firstAttribute="top" secondItem="Mee-0f-WVX" secondAttribute="top" constant="10" id="5Ja-qI-aDi"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="L7o-dH-bUG" secondAttribute="trailing" constant="10" id="CQ5-3G-c2c"/>
                                                 <constraint firstItem="L7o-dH-bUG" firstAttribute="leading" secondItem="uyC-mQ-60L" secondAttribute="trailing" constant="10" id="Nxx-E9-mL5"/>
                                                 <constraint firstItem="8IF-ob-vah" firstAttribute="top" secondItem="Mee-0f-WVX" secondAttribute="topMargin" id="VOA-id-cYz"/>
                                                 <constraint firstItem="uyC-mQ-60L" firstAttribute="leading" secondItem="Mee-0f-WVX" secondAttribute="leading" constant="10" id="WdF-fy-pOu"/>
                                                 <constraint firstAttribute="bottom" secondItem="uyC-mQ-60L" secondAttribute="bottom" constant="10" id="dcc-oj-jRv"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="8IF-ob-vah" secondAttribute="trailing" constant="10" id="q8P-Hb-h1U"/>
                                                 <constraint firstItem="8IF-ob-vah" firstAttribute="leading" secondItem="uyC-mQ-60L" secondAttribute="trailing" constant="10" id="vuG-9Q-WH0"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -78,6 +78,11 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="LKi-el-pq5">
+                                <rect key="frame" x="186" y="416" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" systemColor="labelColor"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -90,6 +95,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Users" id="HD8-en-0d4"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="LKi-el-pq5" id="Nha-G5-Pxf"/>
                         <outlet property="tableView" destination="wu1-vf-PhF" id="fcc-Bw-toH"/>
                     </connections>
                 </viewController>
@@ -175,6 +181,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
