--- a/MyUserList/Base.lproj/Main.storyboard
+++ b/MyUserList/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="svh-Jo-3XS">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,11 +21,11 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="QGJ-3i-ImE" customClass="UserTableViewCell" customModule="MyUserList" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="UserCell" id="QGJ-3i-ImE" customClass="UserTableViewCell" customModule="MyUserList" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QGJ-3i-ImE" id="Mee-0f-WVX">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uyC-mQ-60L">
@@ -40,7 +41,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IF-ob-vah">
-                                                    <rect key="frame" x="80" y="11" width="283" height="21"/>
+                                                    <rect key="frame" x="80" y="29.666666666666671" width="264.66666666666669" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="P2f-jG-puz"/>
                                                     </constraints>
@@ -48,30 +49,17 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7o-dH-bUG">
-                                                    <rect key="frame" x="80" y="48" width="283" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="ytc-ed-9Iw"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="L7o-dH-bUG" secondAttribute="bottom" id="1p0-qG-PPQ"/>
                                                 <constraint firstItem="uyC-mQ-60L" firstAttribute="top" secondItem="Mee-0f-WVX" secondAttribute="top" constant="10" id="5Ja-qI-aDi"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="L7o-dH-bUG" secondAttribute="trailing" constant="10" id="CQ5-3G-c2c"/>
-                                                <constraint firstItem="L7o-dH-bUG" firstAttribute="leading" secondItem="uyC-mQ-60L" secondAttribute="trailing" constant="10" id="Nxx-E9-mL5"/>
                                                 <constraint firstAttribute="bottom" secondItem="uyC-mQ-60L" secondAttribute="bottom" constant="10" id="R3T-1W-wPy"/>
-                                                <constraint firstItem="8IF-ob-vah" firstAttribute="top" secondItem="Mee-0f-WVX" secondAttribute="topMargin" id="VOA-id-cYz"/>
                                                 <constraint firstItem="uyC-mQ-60L" firstAttribute="leading" secondItem="Mee-0f-WVX" secondAttribute="leading" constant="10" id="WdF-fy-pOu"/>
+                                                <constraint firstItem="8IF-ob-vah" firstAttribute="centerY" secondItem="uyC-mQ-60L" secondAttribute="centerY" id="g2y-O4-p7j"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="8IF-ob-vah" secondAttribute="trailing" constant="10" id="q8P-Hb-h1U"/>
                                                 <constraint firstItem="8IF-ob-vah" firstAttribute="leading" secondItem="uyC-mQ-60L" secondAttribute="trailing" constant="10" id="vuG-9Q-WH0"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="emailLabel" destination="L7o-dH-bUG" id="OYE-a4-8q7"/>
                                             <outlet property="nameLabel" destination="8IF-ob-vah" id="weK-gs-tdd"/>
                                             <outlet property="userImageView" destination="uyC-mQ-60L" id="eDz-W6-qeZ"/>
                                         </connections>
